--- a/RedditTheGrint/Base.lproj/Main.storyboard
+++ b/RedditTheGrint/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XRl-Id-LDa">
                                                     <rect key="frame" x="0.0" y="0.0" width="361" height="120"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="post-example-image" translatesAutoresizingMaskIntoConstraints="NO" id="VVI-vg-0WH">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="post-example-image" translatesAutoresizingMaskIntoConstraints="NO" id="VVI-vg-0WH">
                                                             <rect key="frame" x="0.0" y="0.0" width="361" height="120"/>
                                                         </imageView>
                                                     </subviews>
@@ -47,15 +47,15 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NzR-tS-Wkn">
                                                             <rect key="frame" x="8" y="0.0" width="345" height="24"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UserUserUserUser" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wtd-0n-fmN">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="123.33333333333333" height="24"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SubredditSubreddit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Wtd-0n-fmN">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="131.66666666666666" height="24"/>
                                                                     <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="12"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="01/01/2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szz-qu-a0R">
-                                                                    <rect key="frame" x="129.33333333333337" y="0.0" width="215.66666666666663" height="24"/>
-                                                                    <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="12"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Posted by somebody on 01/01/2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Szz-qu-a0R">
+                                                                    <rect key="frame" x="137.66666666666663" y="0.0" width="207.33333333333337" height="24"/>
+                                                                    <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="10"/>
                                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
@@ -147,11 +147,11 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="coreContentView" destination="4Qz-KT-0NP" id="cz9-4Z-pBa"/>
+                                    <outlet property="postAuthorAndDate" destination="Szz-qu-a0R" id="NY0-fM-Dce"/>
                                     <outlet property="postComments" destination="cNt-jv-lAq" id="1JK-sO-hAW"/>
-                                    <outlet property="postDate" destination="Szz-qu-a0R" id="Xm3-mB-LW4"/>
                                     <outlet property="postImage" destination="VVI-vg-0WH" id="zL2-px-URB"/>
+                                    <outlet property="postSubreddit" destination="Wtd-0n-fmN" id="ZtN-xE-M2Y"/>
                                     <outlet property="postTitle" destination="VMl-P8-ZLH" id="QVK-wO-6gN"/>
-                                    <outlet property="postUser" destination="Wtd-0n-fmN" id="ZXw-7a-yZv"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
