--- a/RedditTheGrint/View/Base.lproj/Main.storyboard
+++ b/RedditTheGrint/View/Base.lproj/Main.storyboard
@@ -30,13 +30,13 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="361" height="120"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="post-example-image" translatesAutoresizingMaskIntoConstraints="NO" id="VVI-vg-0WH">
-                                                            <rect key="frame" x="0.0" y="0.0" width="361" height="120"/>
+                                                            <rect key="frame" x="0.0" y="8" width="361" height="112"/>
                                                         </imageView>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="120" id="06F-mV-adp"/>
                                                         <constraint firstAttribute="bottom" secondItem="VVI-vg-0WH" secondAttribute="bottom" id="8eo-Kh-XWF"/>
-                                                        <constraint firstItem="VVI-vg-0WH" firstAttribute="top" secondItem="XRl-Id-LDa" secondAttribute="top" id="gwI-FR-669"/>
+                                                        <constraint firstItem="VVI-vg-0WH" firstAttribute="top" secondItem="XRl-Id-LDa" secondAttribute="top" constant="8" id="gwI-FR-669"/>
                                                         <constraint firstItem="VVI-vg-0WH" firstAttribute="leading" secondItem="XRl-Id-LDa" secondAttribute="leading" id="t6f-wo-BEl"/>
                                                         <constraint firstAttribute="trailing" secondItem="VVI-vg-0WH" secondAttribute="trailing" id="zZM-is-nBJ"/>
                                                     </constraints>
@@ -74,9 +74,6 @@
                                                         </view>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMl-P8-ZLH">
                                                             <rect key="frame" x="8" y="32" width="345" height="59"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="59" id="nE4-7a-e9X"/>
-                                                            </constraints>
                                                             <string key="text">Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title Title</string>
                                                             <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="16"/>
                                                             <nil key="textColor"/>
@@ -147,6 +144,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="coreContentView" destination="4Qz-KT-0NP" id="cz9-4Z-pBa"/>
+                                    <outlet property="imageHeightConstraint" destination="06F-mV-adp" id="Yne-CX-ZHV"/>
                                     <outlet property="postAuthorAndDate" destination="Szz-qu-a0R" id="NY0-fM-Dce"/>
                                     <outlet property="postComments" destination="cNt-jv-lAq" id="1JK-sO-hAW"/>
                                     <outlet property="postImage" destination="VVI-vg-0WH" id="zL2-px-URB"/>
